--- a/molecular_desc.ipynb
+++ b/molecular_desc.ipynb
@@ -2089,7 +2089,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data.to_csv('feature_descriptors.csv')"
+    "train_data.to_csv('train_feature_desc.csv')"
    ]
   },
   {
