train descriptors filename changes

--- a/src/initial_sub.ipynb
+++ b/src/initial_sub.ipynb
@@ -265,7 +265,7 @@
     }
    ],
    "source": [
-    "train_dataset = pd.read_csv('feature_descriptors.csv')\n",
+    "train_dataset = pd.read_csv('train_feature_desc.csv')\n",
     "train_dataset.drop('Unnamed: 0', axis=1, inplace=True)\n",
     "pd.set_option('display.max_rows', None)\n",
     "\n",
